# doctester

./: CONTRIBUTING.md  README.md  pyproject.toml
src/doctester/: __init__.py  _cli.py  _console.py  _discovery.py  _main.py  _models.py  _stub_parser.py  _stub_runner.py  _stubs.py
src/pytest_stubtester/: __init__.py  plugin.py
src/stubtester/: __init__.py  __main__.py  _blocks.py  _cli.py  _console.py  _main.py  _stubs.py
tests/: __init__.py  clean.pyi  conftest.py  edge_cases.pyi  foo.pyi  main.py  no_tests.pyi  test_cli.py  test_main.py  test_stubtester.py
tests/examples/: clean.pyi
tests/examples/failures/: failures.md  failures_separated.md
tests/examples/success/: advanced.md  clean.pyi  edge_cases.md  simple.md
