[project]
    dependencies    = ["pyochain>=0.5.52", "pytest>=9.0.2"]
    description     = "Pytest plugin for discovering and running doctests from Python stub files (.pyi)."
    name            = "pytest-stubtester"
    readme          = "README.md"
    requires-python = ">=3.12"
    version         = "0.3.0"

    [project.entry-points.pytest11]
        stubtester = "pytest_stubtester.plugin"

[tool.uv]
    package = true

    [tool.uv.sources]
        pytest_stubtester = { workspace = true }

[build-system]
    build-backend = "uv_build"
    requires      = ["uv_build>=0.9.18"]
[tool.ruff]
    lint.ignore = [
        "C417",
        "COM812",
        "COM812",
        "D401",
        "E501",
        "FIX002",
        "PLC0415",
        "PYI021",
        "S101",
        "S603",
        "S608",
        "SLF001",
        "T201",
        "TC003",
        "TC006",
        "TD002",
        "TD003",
        "TID252",
    ]
    lint.select = ["ALL"]
    [tool.ruff.format]
        docstring-code-format = true

[dependency-groups]
    dev = ["pyochain>=0.5.52", "pytest>=9.0.2", "ruff>=0.14.9"]
    [tool.ruff.lint.pydocstyle]
        convention = "google"
